tests/fixtures/invalid/round_str_dict.py
# Cannot call round() with Str, Dict[str, int]
x = round("hello", {"a": 1})
